--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:600,400,300';@import 'https://fonts.googleapis.com/css?family=Roboto+Mono:400';
+@import 'https://fonts.googleapis.com/css?family=Open+Sans:600,400,300';
+@import 'https://fonts.googleapis.com/css?family=Roboto+Mono:400';
 
 html {
     font: normal 16px / 26px "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif !important;
@@ -43,8 +44,8 @@ padding-bottom: 30px;
   
 }
 .section-two-item{
-   width: 180px;
-   margin-right: 33px;
+    margin-top: 3rem;
+    margin-right: 3rem;
    cursor: pointer;
 
 }
@@ -55,6 +56,7 @@ padding-bottom: 30px;
 
 .section-text-block{
 	margin-top: 50px;
+
 }
 
 .section-text-tittle{
@@ -82,11 +84,6 @@ padding-bottom: 30px;
 .fa-5{
     font-size: 7rem;
 }
-.rounded-left{
-    border-top-left-radius: 0.5rem !important;
-    border-bottom-left-radius: 0.5rem !important;
-}
-.rounded-right{
-    border-top-right-radius: 0.5rem !important;
-    border-bottom-right-radius: 0.5rem !important;
+.fa-4{
+    font-size: 5rem;
 }
