--- a/css/main.css
+++ b/css/main.css
@@ -132,3 +132,8 @@ a:hover{
 .common-footer-lastline{
     padding-bottom: 15px;
 }
+
+.intro-start{
+    background-color: #026FCE;
+    background: linear-gradient(45deg , #026FCE 63% , #1e88e5 97%); 
+}
