--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ html {
     color: #888888;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    filter:grayscale(100%) !important;
 }
 
 body.has-navbar-top{
